// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CellAccount - Snapshot should render CellAccountDisplayItem given the type Display 1`] = `
<CellAccountDisplayItem
  avatarAccountAddress="0x2990079bcdEe240329a520d2444386FC119da21a"
  avatarAccountType="JazzIcon"
  testID="cell-account-display"
  title="Orangefox.eth"
  type="Display"
/>
`;

exports[`CellAccount - Snapshot should render CellAccountMultiselectItem given the type Multiselect 1`] = `
<CellAccountMultiselectItem
  avatarAccountAddress="0x2990079bcdEe240329a520d2444386FC119da21a"
  avatarAccountType="JazzIcon"
  testID="cell-account-multi-select"
  title="Orangefox.eth"
  type="Multiselect"
/>
`;

exports[`CellAccount - Snapshot should render CellAccountSelectItem given the type Select 1`] = `
<CellAccountSelectItem
  avatarAccountAddress="0x2990079bcdEe240329a520d2444386FC119da21a"
  avatarAccountType="JazzIcon"
  testID="cell-account-select"
  title="Orangefox.eth"
  type="Select"
/>
`;
